@@ -1,9 +1,9 @@
-function [V, converged, i, lam] = cpf_corrector(Ybus, Sbus, V0, ref, pv, pq, ...
-                lam0, Sxfr, Sbust, Vprv, lamprv, z, step, parameterization, mpopt)
+function [V, converged, i, lam] = cpf_corrector(Ybus, Sbusb, V0, ref, pv, pq, ...
+                lam0, Sbust, Vprv, lamprv, z, step, parameterization, mpopt)
 %CPF_CORRECTOR  Solves the corrector step of a continuation power flow using a
 %   full Newton method with selected parameterization scheme.
-%   [V, CONVERGED, I, LAM] = CPF_CORRECTOR(YBUS, SBUS, V0, REF, PV, PQ, ...
-%                                       LAM0, SXFR, SBUST, VPRV, LPRV, Z, ...
+%   [V, CONVERGED, I, LAM] = CPF_CORRECTOR(YBUS, SBUSB, V0, REF, PV, PQ, ...
+%                                       LAM0, SBUST, VPRV, LPRV, Z, ...
 %                                       STEP, PARAMETERIZATION, MPOPT)
 %   solves for bus voltages and lambda given the full system admittance
 %   matrix (for all buses), the complex bus power injection vector (for
@@ -73,9 +73,10 @@ j3 = j2 + 1;    j4 = j2 + npq;      %% j3:j4 - V angle of pq buses
 j5 = j4 + 1;    j6 = j4 + npq;      %% j5:j6 - V mag of pq buses
 j7 = j6 + 1;    j8 = j6 + 1;        %% j7:j8 - lambda
 
-%% evaluate F(x0, lam0), including Sxfr transfer/loading
-Sxf = Sxfr(Vm);
-mis = V .* conj(Ybus * V) - Sbus - lam*Sxf;
+%% evaluate F(x0, lam0), including transfer/loading
+Sb = Sbusb(Vm);
+St = Sbust(Vm);
+mis = V .* conj(Ybus * V) - Sb - lam * (St - Sb);
 F = [   real(mis([pv; pq]));
         imag(mis(pq))   ];
 
@@ -107,8 +108,9 @@ while (~converged && i < max_it)
     
     %% evaluate Jacobian
     [dSbus_dVm, dSbus_dVa] = dSbus_dV(Ybus, V);
-    [dummy, neg_dSd_dVm] = Sbust(Vm);
-    dSbus_dVm = dSbus_dVm - lam * neg_dSd_dVm;
+    [dummy, neg_dSdb_dVm] = Sbusb(Vm);
+    [dummy, neg_dSdt_dVm] = Sbust(Vm);
+    dSbus_dVm = dSbus_dVm - neg_dSdb_dVm - lam * (neg_dSdt_dVm - neg_dSdb_dVm);
     
     j11 = real(dSbus_dVa([pv; pq], [pv; pq]));
     j12 = real(dSbus_dVm([pv; pq], pq));
@@ -118,6 +120,7 @@ while (~converged && i < max_it)
     J = [   j11 j12;
             j21 j22;    ];
 
+    Sxf = St - Sb;
     dF_dlam = -[real(Sxf([pv; pq])); imag(Sxf(pq))];
     [dP_dV, dP_dlam] = cpf_p_jac(parameterization, z, V, lam, Vprv, lamprv, pv, pq);
 
@@ -144,8 +147,9 @@ while (~converged && i < max_it)
     lam = lam + dx(j7:j8);
 
     %% evalute F(x, lam)
-    Sxf = Sxfr(Vm);
-    mis = V .* conj(Ybus * V) - Sbus - lam*Sxf;
+    Sb = Sbusb(Vm);
+    St = Sbust(Vm);
+    mis = V .* conj(Ybus * V) - Sb - lam * (St - Sb);
     F = [   real(mis(pv));
             real(mis(pq));
             imag(mis(pq))   ];
