@@ -1,4 +1,4 @@
-function [V0, lam0, z] = cpf_predictor(V, lam, Ybus, Sxfr, Sbust, pv, pq, ...
+function [V0, lam0, z] = cpf_predictor(V, lam, Ybus, Sbusb, Sbust, pv, pq, ...
                             step, z, Vprv, lamprv, parameterization)
 %CPF_PREDICTOR  Performs the predictor step for the continuation power flow
 %   [V0, LAM0, Z] = CPF_PREDICTOR(V, LAM, YBUS, SXFR, SBUST, PV, PQ, ...
@@ -11,9 +11,8 @@ function [V0, lam0, z] = cpf_predictor(V, lam, Ybus, Sxfr, Sbust, pv, pq, ...
 %       V : complex bus voltage vector at current solution
 %       LAM : scalar lambda value at current solution
 %       YBUS : complex bus admittance matrix
-%       SXFR : handle of function returning complex vector of scheduled
-%              transfers in p.u. (difference between bus injections in base
-%              and target cases)
+%       SBUSB : handle of function returning bus injections for base case
+%               and derivatives w.r.t. voltage magnitudes
 %       SBUST : handle of function returning bus injections for target case
 %               and derivatives w.r.t. voltage magnitudes
 %       PV : vector of indices of PV buses
@@ -49,8 +48,9 @@ Vm = abs(V);
 
 %% compute Jacobian for the power flow equations
 [dSbus_dVm, dSbus_dVa] = dSbus_dV(Ybus, V);
-[dummy, neg_dSd_dVm] = Sbust(Vm);
-dSbus_dVm = dSbus_dVm - lam * neg_dSd_dVm;
+[dummy, neg_dSdb_dVm] = Sbusb(Vm);
+[dummy, neg_dSdt_dVm] = Sbust(Vm);
+dSbus_dVm = dSbus_dVm - neg_dSdb_dVm - lam * (neg_dSdt_dVm - neg_dSdb_dVm);
 
 j11 = real(dSbus_dVa([pv; pq], [pv; pq]));
 j12 = real(dSbus_dVm([pv; pq], pq));
@@ -60,7 +60,7 @@ j22 = imag(dSbus_dVm(pq, pq));
 J = [   j11 j12;
         j21 j22;    ];
 
-Sxf = Sxfr(Vm);     %% update target based on current voltages
+Sxf = Sbust(Vm) - Sbusb(Vm);    %% "transfer" at current voltage level
 dF_dlam = -[real(Sxf([pv; pq])); imag(Sxf(pq))];
 [dP_dV, dP_dlam] = cpf_p_jac(parameterization, z, V, lam, Vprv, lamprv, pv, pq);
 
