@@ -206,19 +206,18 @@ elseif mpopt.verbose > 1
     fprintf('step %3d : lambda = %6.3f, %2d Newton steps\n', 0, 0, iterations);
 end
 
-Sbusb0 = Sbusb(abs(V));
-Sxfr = @(Vm)Sbust(Vm) - Sbusb0;
+Vm = abs(V);
 lamprv = lam;   %% lam at previous step
 Vprv   = V;     %% V at previous step
 continuation = 1;
 cont_steps = 0;
 
 %% input args for callbacks
-Sxf = Sxfr(abs(V));
+Sxfr = Sbust(Vm) - Sbusb(Vm);
 cb_data = struct( ...
     'mpc_base', mpcbase, ...
     'mpc_target', mpctarget, ...
-    'Sxfr', Sxf, ...
+    'Sxfr', Sxfr, ...
     'Ybus', Ybus, ...
     'Yf', Yf, ...
     'Yt', Yt, ...
@@ -234,7 +233,7 @@ for k = 1:length(callbacks)
                             cb_data, cb_state, cb_args);
 end
 
-if norm(Sxf) == 0
+if norm(Sxfr) == 0
     if mpopt.verbose
         fprintf('base case and target case have identical load and generation\n');
     end
@@ -245,10 +244,10 @@ end
 %% tangent predictor z = [dx;dlam]
 z = zeros(2*length(V)+1,1);
 z(end,1) = 1.0;
-while(continuation)
+while continuation
     cont_steps = cont_steps + 1;
     %% prediction for next step
-    [V0, lam0, z] = cpf_predictor(V, lam, Ybus, Sxfr, Sbust, pv, pq, step, z, ...
+    [V0, lam0, z] = cpf_predictor(V, lam, Ybus, Sbusb, Sbust, pv, pq, step, z, ...
         Vprv, lamprv, parameterization);
 
     %% save previous voltage, lambda before updating
@@ -256,8 +255,8 @@ while(continuation)
     lamprv = lam;
 
     %% correction
-    [V, success, i, lam] = cpf_corrector(Ybus, Sbusb0, V0, ref, pv, pq, ...
-                lam0, Sxfr, Sbust, Vprv, lamprv, z, step, parameterization, mpopt_pf);
+    [V, success, i, lam] = cpf_corrector(Ybus, Sbusb, V0, ref, pv, pq, ...
+                lam0, Sbust, Vprv, lamprv, z, step, parameterization, mpopt_pf);
     if ~success
         continuation = 0;
         if mpopt.verbose
